--- a/admin-portal/package.json
+++ b/admin-portal/package.json
@@ -39,10 +39,12 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "firebase": "^9.23.0",
+    "firebase-admin": "^13.2.0",
     "isomorphic-dompurify": "^2.22.0",
     "lucide-react": "^0.477.0",
     "moment": "^2.30.1",
     "next": "^15.2.1",
+    "next-auth": "^4.24.11",
     "postcss": "^8.4.31",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
