--- a/admin-portal/package.json
+++ b/admin-portal/package.json
@@ -51,6 +51,7 @@
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.3.5",
     "uuid": "^11.1.0"
