--- a/admin-portal/package.json
+++ b/admin-portal/package.json
@@ -32,8 +32,6 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
-    "@types/dompurify": "^3.2.0",
-    "@types/react-datepicker": "^7.0.0",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.16",
     "date-fns": "^4.1.0",
@@ -45,6 +43,8 @@
     "moment": "^2.30.1",
     "next": "^15.2.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.31",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
@@ -52,14 +52,20 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.5.2",
+    "react-signature-canvas": "^1.1.0-alpha.1",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.3.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^20.8.7",
+    "@types/node-fetch": "^2.6.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.31",
     "@types/react-big-calendar": "^1.16.1",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.2.14",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
