--- a/admin-portal/package.json
+++ b/admin-portal/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint",
     "import-tutorials": "ts-node scripts/import-tutorials.ts",
     "import-tutorials:dry-run": "ts-node scripts/import-tutorials.ts --dry-run",
-    "import-tutorials:plan": "ts-node scripts/import-tutorials.ts --plan-id="
+    "import-tutorials:plan": "ts-node scripts/import-tutorials.ts --plan-id=",
+    "upload-videos": "node scripts/upload-videos.js",
+    "generate-metadata": "node scripts/generate-metadata.js",
+    "collect-metadata": "node scripts/collect-metadata.js",
+    "upload-thumbnails": "node scripts/upload-thumbnails.js",
+    "map-thumbnails": "node scripts/map-thumbnails.js",
+    "map-upload-thumbnails": "node scripts/map-upload-thumbnails.js",
+    "upload-thumbnails-improved": "node scripts/upload-thumbnails-improved.js"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.27.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
@@ -37,9 +45,13 @@
     "@tiptap/starter-kit": "^2.11.5",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.16",
+    "canvas-confetti": "^1.9.3",
+    "csv-parse": "^5.6.0",
+    "csv-stringify": "^6.5.2",
     "date-fns": "^4.1.0",
     "firebase": "^9.23.0",
     "firebase-admin": "^13.2.0",
+    "fs": "^0.0.1-security",
     "isomorphic-dompurify": "^2.22.0",
     "lucide-react": "^0.477.0",
     "moment": "^2.30.1",
@@ -49,6 +61,7 @@
     "pdf-lib": "^1.17.1",
     "postcss": "^8.4.31",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.18.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
@@ -61,11 +74,13 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.0",
     "@types/dompurify": "^3.2.0",
     "@types/node": "^20.8.7",
     "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.31",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.2.14",
