--- a/admin-portal/package.json
+++ b/admin-portal/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.27.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
@@ -49,14 +50,18 @@
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
     "date-fns": "^4.1.0",
+    "ffmpeg-extract-frames": "^2.0.2",
+    "ffmpeg.js": "^4.2.9003",
     "firebase": "^9.23.0",
     "firebase-admin": "^13.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "isomorphic-dompurify": "^2.22.0",
     "lucide-react": "^0.477.0",
     "moment": "^2.30.1",
     "next": "^15.2.1",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "pdf-lib": "^1.17.1",
     "postcss": "^8.4.31",
